# DODK

./: .gitignore  .gitmodules  README.md  meson.build
app/: APP Usage.md  meson.build  test.c
app/common/: dpdk_utils.c  flow_parser.h  flow_pipes_manager.c  flow_pipes_manager.h  offload_rules.c
app/firewall/: firewall.c  firewall_core.c  firewall_core.h  firewall_params.json  meson.build
app/firewall_new/: firewall_core.c  firewall_params.json  firewall_rules.json  meson.build
app/grpc_simple_fwd_vnf/: SimpleFlow.grpc.pb.cc  SimpleFlow.grpc.pb.h  SimpleFlow.pb.cc  SimpleFlow.pb.h  SimpleFlow.proto  client.cc  meson.build  simple_fwd.c  simple_fwd.h  simple_fwd_control.c  simple_fwd_ft.c  simple_fwd_pkt.c  simple_fwd_port.c  simple_fwd_port.h  simple_fwd_vnf.cc  simple_fwd_vnf_core.c  simple_fwd_vnf_core.h
app/nat/: meson.build  nat.c  nat_core.c  nat_core.h  nat_params.json  nat_pat_rules.json  nat_static_rules.json
app/simple_fwd_vnf/: meson.build  simple_fwd.c  simple_fwd.h  simple_fwd_control.c  simple_fwd_ft.c  simple_fwd_pkt.c  simple_fwd_vnf.c  simple_fwd_vnf_core.c  simple_fwd_vnf_core.h
app/simple_fwd_vnf_new/: meson.build  simple_fwd_vnf_core.c
app/soft_flow/: main.c  meson.build
app/switch/: meson.build  switch.c  switch_core.c  switch_core.h
app/test_dpdk_table/: main.c
doc/: DPU固件本地签名.docx  client.c  dpu_dma_microbench_dma.xlsx  libaio-dev_0.3.112-5_amd64_2.deb  ping.sh  server.c  wrap_grpc.md
lib/: doca_argp.c  doca_compat.h  doca_flow.c  doca_flow_net.h  doca_log.c  dpdk_utils.c  meson.build  offload_rules.h  utils.h
lib/common/: dpdk_utils.c  meson.build  utils.c  utils.h
lib/doca_argp/: doca_argp.c  doca_argp.h  meson.build
lib/doca_common/: doca_error.c  doca_error.h  doca_types.h  doca_version.c  doca_version.h  dpdk_utils.c  dpdk_utils.h  meson.build
lib/doca_flow/: doca_flow.c  doca_flow.h  doca_flow_grpc_client.cc  doca_flow_grpc_client.h  doca_flow_grpc_server.cc  doca_flow_net.h  flow_grpc.grpc.pb.cc  flow_grpc.grpc.pb.h  flow_grpc.pb.cc  flow_grpc.pb.h  flow_grpc.proto  grpc_orchestrator.grpc.pb.h  grpc_orchestrator.pb.cc  grpc_orchestrator.pb.h  meson.build
lib/doca_log/: doca_log.c  doca_log.h  meson.build
lib/soft_flow/: meson.build  soft_flow.c  soft_flow.h
orchestrator/: common_pb2.py  common_pb2_grpc.py  doca_grpc.conf  doca_grpc_orchestrator.proto  doca_grpc_server.py  grpc_client.py  grpc_orchestrator.grpc.pb.cc  grpc_orchestrator.proto  grpc_orchestrator_pb2.py  grpc_orchestrator_pb2_grpc.py  grpc_server.py  test.py
soft_flow/: main.c  meson.build
